deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: no-as-a-service
  namespace: naas
spec:
  selector:
    app: no-as-a-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
